# heating-planner

./: .gitignore  README.md  TODO.md  Untitled.ipynb  build_hypercube.py  calibrate_conversion_xy_coords.py  colorscaling.ipynb  compute_scores.py  convert_colormaps_to_values.py  convert_maps_to_values.py  create_or_update_database.py  credentials.yaml  custom_convert_sealevel.py  data_extraction.ipynb  display_map_calibration.py  display_results.py  metadata_extraction.ipynb  nomenclature.csv  pyproject.toml  refine_data_img.ipynb  register_scales.py  register_viable.py
custom_converters/: custom_convert_price.py  custom_convert_sealevel.py
heating_planner/: colorscale.py  constantes.py  data.py  file_layout.py  geocoding.py  map_handling.py  utils.py  value_comparison.py
heating_planner/streamlit/: display.py  display2.py  io.py  register_viable.py
heating_planner/streamlit/tools/: selectors.py  utils.py
