[tool.poetry]
name = "heating-planner"
version = "0.1.0"
description = ""
authors = ["François Weber <francois.weber.commercial@gmx.fr>"]
readme = "README.md"
packages = [{ include = "heating_planner" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
typer = "^0.9.0"
loguru = "^0.7.0"
streamlit = "^1.25.0"
geopy = "^2.3.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.0"
watchdog = "^3.0.0"
click = "^8.1.7"
matplotlib = "^3.7.2"
ipykernel = "^6.25.1"
streamlit-image-coordinates = "^0.1.6"
streamlit-authenticator = "^0.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
